Conclusa section contatti

--- a/css/style.css
+++ b/css/style.css
@@ -682,7 +682,7 @@ h3.my-profession{
     max-width: 50%;
 }
 
-.contact .contact-form .col12{
+.contact .contact-form .col-12{
     flex: 0 0 100%;
     max-width: 100%;
 }
@@ -694,4 +694,30 @@ h3.my-profession{
 .contact .contact-form .form-item .form-control{
     width: 100%;
     height: 50px;
+    border-radius: 25px;
+    background: var(--bg-black-100);
+    border: 1px solid var(--bg-black-50);
+    padding: 10px 25px;
+    font-size: 16px;
+    color: var(--text-black-700);
+    transition: all 0.3s ease;
+}
+
+.contact .contact-form .form-item .form-control:focus{
+    box-shadow: 0 0 20px rgba(48, 46, 77, .15);
+}
+
+.contact .contact-form .form-item textarea.form-control{
+    height: 140px;
+}
+
+.contact .contact-form .btn{
+    height: 50px;
+    padding: 0 50px;
+}
+
+@media (max-width:1199px){
+    .aside{
+        left: -270px;
+    }
 }
