--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -9,6 +9,11 @@
     z-index: 101;
     border-radius: 5px;
     transition: all 0.3s ease;
+    transform: translateX(100%);
+}
+
+.style-switcher.open{
+    transform: translateX(-25px);
 }
 
 .style-switcher .s-icon{
