--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,26 @@ ul{
     z-index: 0;
     overflow-y: auto;
     overflow-x: hidden;
+    transition: all 0.3s ease;
+}
+
+.section.back-section{
+    z-index: 1;
 }
 
 .section.active{
     z-index: 2;
     opacity: 1;
+    animation: slideSection 1s ease;
+}
+
+@keyframes slideSection{
+    0%{
+        transform: translateX(100%);
+    }
+    100%{
+        transform: translateX(0%);
+    }
 }
 
 .hidden{
@@ -157,6 +172,7 @@ ul{
     justify-content: center;
     align-items: center;
     z-index: 10;
+    transition: all 0.3s ease;
 }
 
 .aside .logo{
@@ -215,6 +231,7 @@ ul{
     display: none;
     justify-content: center;
     align-items: center;
+    transition: all 0.3s ease;
 }
 
 .aside .nav-toggler span{
@@ -223,6 +240,10 @@ ul{
     background: var(--skin-color);
     display: inline-block;
     position: relative;
+}
+
+.aside .nav-toggler.open span{
+    background-color: transparent;
 }
 
 .aside .nav-toggler span::before{
@@ -235,6 +256,11 @@ ul{
     left: 0;
 }
 
+.aside .nav-toggler.open span::before{
+    transform: rotate(45deg);
+    top: 0;
+}
+
 .aside .nav-toggler span::after{
     content: '';
     height: 2px;
@@ -243,6 +269,11 @@ ul{
     position: absolute;
     top: 6px;
     left: 0;
+}
+
+.aside .nav-toggler.open span::after{
+    transform: rotate(-45deg);
+    top: 0;
 }
 
 .aside .nav{
@@ -314,6 +345,7 @@ h3.my-profession{
 .home .home-img{
     flex: 0 0 40%;
     max-width: 40%;
+    max-height: 407px;
     text-align: center;
     position: relative;
 }
@@ -325,7 +357,7 @@ h3.my-profession{
     width: 80px;
     border-top: 10px solid var(--skin-color);
     border-left: 10px solid var(--skin-color);
-    left: -20px;
+    left: 40px;
     top: -40px;
 }
 
@@ -336,7 +368,7 @@ h3.my-profession{
     width: 80px;
     border-bottom: 10px solid var(--skin-color);
     border-right: 10px solid var(--skin-color);
-    right: 20px;
+    right: 40px;
     bottom: -40px;
 }
 
@@ -406,7 +438,6 @@ h3.my-profession{
 }
 
 .about .about-content .personal-info .buttons .btn{
-    margin-right: 15px;
     margin-top: 10px;
 }
 
@@ -733,16 +764,39 @@ h3.my-profession{
     padding: 0 50px;
 }
 
-@media (max-width:1199px){
+@media (max-width:1249px){
+    .section .container{
+        padding-top: 70px;
+    }
     .aside{
         left: -270px;
     }
-    .main-content{
-        padding-left: 0;
+    .aside.open{
+        left: 0;
+    }
+    .aside .nav-toggler{
+        display: flex;
+        left: 30px;
+    }
+    .aside .nav-toggler.open{
+        left: 300px;
+    }
+    .section{
+        left: 0;
+    }
+    .section.open{
+        left: 270px;
     }
     .about .about-content .personal-info .info-item p span{
         display: block;
         margin-left: 0;
+    }
+    .home .home-img{
+        display: none;
+    }
+    .home .home-info{
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 }
 
@@ -754,13 +808,9 @@ h3.my-profession{
         max-width: 50%;
     }
     .about .about-content .education,
-    .about .about-content .experience,
-    .home .home-info{
+    .about .about-content .experience{
         flex: 0 0 100%;
         max-width: 100%;
-    }
-    .home .home-img{
-        display: none;
     }
 }
 
@@ -775,5 +825,18 @@ h3.my-profession{
     .about .about-content .personal-info{
         flex: 0 0 100%;
         max-width: 100%;
+    }
+}
+@media (max-width:500px){
+    .aside.open{
+        width: 100%;
+    }
+    .aside .nav-toggler.open{
+        left: initial;
+        right: 20px;
+    }
+
+    .style-switcher{
+        top: 80px !important;
     }
 }
