--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ ul{
     border-bottom: 5px solid var(--skin-color);
     border-left: 5px solid var(--skin-color);
     bottom: 0;
-    left: 0;
+    left: -20px;
 }
 
 .aside .logo a::after{
@@ -215,7 +215,7 @@ ul{
     border-top: 5px solid var(--skin-color);
     border-right: 5px solid var(--skin-color);
     top: 0;
-    right: 0;
+    right: 0px;
 }
 
 .aside .nav-toggler{
@@ -408,8 +408,8 @@ h3.my-profession{
 }
 
 .about .about-content .personal-info{
-    flex: 0 0 60%;
-    max-width: 60%;
+    flex: 0 0 100%;
+    max-width: 100%;
     margin-top: 40px;
 }
 
@@ -679,6 +679,7 @@ h3.my-profession{
 
 .portfolio .portfolio-item-inner .portfolio-img img{
     width: 100%;
+    height: 230px;
     display: block;
 }
 
@@ -834,6 +835,10 @@ h3.my-profession{
         flex: 0 0 100%;
         max-width: 100%;
     }
+    .about .about-content .personal-info .info-item{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
 @media (max-width:500px){
     .aside.open{
@@ -846,5 +851,9 @@ h3.my-profession{
 
     .style-switcher{
         top: 80px !important;
+    }
+    .about .about-content .personal-info .info-item {
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 }
